# FILEBOSS

./: .coverage  .dockerignore  .env.backup  .env.example  .env.production  .gitignore  .gitleaks.toml  .httpyac.js  .httpyac.json  .pre-commit-config.yaml  APEX_ECOSYSTEM_NOTES.md  APEX_INTEGRATION.md  ARCHITECTURE.md  CLEAN.py  CLEANUP_ARCHIVE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.sh  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  Dockerfile  Dockerfile.mcp  Dockerfile.production  ENVIRONMENT_SETUP.md  FILEBOSS_ANDROID_COMPLETE.tsx  FILEBOSS_STANDALONE.py  FUNCTION_SUMMARY.md  HYBRID_DEPLOYMENT_GUIDE.md  INSTALL_ANDROID.md  INSTRUCTIONS.md  Makefile  PHASE1_COMPLETE.md  POWERFUL_IDEAS_COMPILATION.md  PRODUCTION_DEPLOY.md  RAILWAY_DEPLOY.md  README-ENHANCED.md  README.md  RUN.bat  (+107 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: README.md  apex-media-pipeline.yml  apex-triage.yml  auto-label.yml  ci-cd.yml  ci.yml  codeql.yml  connection-check.yml  coverage.yml  dependency-review.yml  deploy-fileboss-e2b.yml  docker.yml  docs-build.yml  dropbox-organizer.yml  e2b-deployment-fixed.yml  full-ci.yml  mcp_observability.yml  pre-commit.yml  process-evidence.yml  python-package-conda.yml  quality-check.yml  release.yml  secret-scan.yml  security-check.yml  stale.yml  sync-config.json  tomahawk-legal-automation.yml  weekly-audit.yml
PROJECT HEAD/: README.md
PROJECT HEAD/Devin/: ENVIRONMENT_SETUP.md  pyproject.toml  setup-enhanced.py  start-enhanced.ps1  supabase-schema.sql  verify-setup.ps1
PROJECT HEAD/FileSystemMaster/FileSystemMaster/: .replit  ai_analyzer.py  backup_manager.py  config.py  corruption_evidence_analysis.py  demo_cost_effective_ai.py  demo_enhanced_analysis.py  enhanced_ai_analyzer.py  file_organizer.py  file_processor.py  final_cost_effective_demo.py  judicial_corruption_analyzer.py  legal_research_integration.py  logger.py  main.py  memory_enhanced_analyzer.py  multi_ai_analyzer.py  notion_sync.py  process_court_evidence.py  pyproject.toml  utils.py
PROJECT HEAD/FileSystemMaster/FileSystemMaster/attached_assets/: 219 court.txt  219 walk in .txt  219 walk out .txt  829 court.txt  ALL APIS.txt  Forensic_Tips_to_Detect_AI_Misuse.csv  Pasted--VAULT-PROTOCOL-INITIATED-This-block-contains-sensitive-access-to-1748600791885.txt  Pasted--id-675f5ffd-be30-8013-af1f-bc9daff9d497-title-API-Setup-search-created-173-1748601855334.txt  RELEVANT JACK THE RIPPER.docx
PROJECT HEAD/FileSystemMaster/FileSystemMaster/organized_files/: corruption_evidence_report.json  corruption_summary.txt
PROJECT HEAD/FileSystemMaster/FileSystemMaster/test_files/: compliance_audit_report.txt  financial_report_q4.txt  meeting_notes_2024.txt  presentation_slides.txt  random_document.txt  service_agreement_draft.txt
PROJECT HEAD/FileSystemMaster/FileSystemMaster/test_files/organized_files/: organization_report.txt
PROJECT HEAD/Files-main/: BREAKING_CHANGES.md  CONTRIBUTING.md  GPUManager.cs  LOCALIZATION_GUIDE.md  PLUGINS_README.md  README.md  Settings.XamlStyler
PROJECT HEAD/Hierarchical-Sorting-Legal-Documents-using-NLP-main/: Hierarchy.ipynb
PROJECT HEAD/Local-File-Organizer-main/: file_utils.py  main.py  requirements.txt
PROJECT HEAD/OpenDevin.OpenDevin-main/: .env.example  .gitignore  README-ENHANCED.md  docker-compose.enhanced.yml  setup-environment.ps1  warp.toml
PROJECT HEAD/lawglance_project/: .placeholder  MIGRATION_GUIDE.md  QuickBuild.md  (+16 more)
alembic/: README.md  __init__.py  env.py
app/: __init__.py  main.py
browser_automation/: README.md  playwright_automation.py  scrapy_integration.py  selenium_automation.py  supermemory_offloader.py  unified_memory_system.py
casebuilder/: __init__.py  cascade_integration.py  config.py  database.py  models.py
config/: app_settings.py
deep_soul_catalyst/: run_pipeline.py
docs/: DEVELOPMENT.md  README.md  api-reference.md  architecture.md  deployment.md  development.md  file_organizer_guide.md  index.md  installation.md  mcp_architecture.md  omnithread_forensic_protocol.md  secrets_policy.md
e2b_integration/: README.md  deploy_e2b_fileboss.sh  fileboss_e2b_engine.py  quantum_legal_processor.py
granite_integration/: README.md  direct_download.py  download_model.py  requirements.txt
integrations/: __init__.py  apex_api.py  apex_orchestrator.py
legal_processor/: __init__.py  legal_document_processor.py  motion_templates.py
megacasebuilder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nginx/: nginx.conf
omnithread_forensic/: README.md  requirements.txt
opendevin/: config.py
plugins/: __init__.py  codex_resonator.py
scripts/: build_docs.sh  check_db.py  check_imports.py  check_postgres.py  check_system.py  create_migration.py  debug_db.py  dev.sh  init_db.py  inspect_db.py  manage.py  process_and_organize.py  run_audit.sh  run_checks.sh  run_ci.sh  run_coverage.sh  run_migration.py  run_migrations.py  run_security_scan.sh  setup_db.py  simple_check.py  start.py  start_postgres.py  sync_github_actions.py  test_connection.py  test_db_connection.py  test_sqlalchemy.py  verify_db.py  verify_schema.py
smie_system/: __init__.py  launch-smie.ps1  memory_modules.py  requirements.txt  smie_config.py  smie_main.py  smie_orchestrator.py  smie_results.json
startup/: README.md  run.py
tabs/: __init__.py  ai_analysis_tab.py  casebuilder_tab.py  document_generator_tab.py  file_organizer_tab.py  legal_brain_tab.py  photoprism_tab.py  system_monitor_tab.py  whisperx_tab.py
test_legal_docs/: motion_to_dismiss.txt  notice_of_hearing.docx
tests/: __init__.py  conftest.py  test_ai_analysis.py  test_ai_case_orchestrator.py  test_anthropic_integration.py  test_async_upgrade_manager.py  test_codex_resonator.py  test_evidence_processing.py  test_fileboss.py  test_fusion_meshmaster.py  test_meta_optimizer.py  test_persistent_ws.py  test_upgrade_combo.py
your-next-app/: .gitignore  .gitpod.Dockerfile  Makefile  docker-compose.yml  mcp_config.json  next.config.js  package.json
(+661 files in other folders)
